// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manifestation Query all fields 1`] = `
Object {
  "data": Object {
    "manifestation": Object {
      "abstract": Array [
        "Den ellers så pæne familie Didriksen går straks i aktion som detektiver, da det viser sig, at deres ret så usædvanlige hund er blevet kidnappet af en mistænkelig iskagemand!",
      ],
      "access": Array [
        Object {
          "__typename": "InterLibraryLoan",
          "loanIsPossible": true,
        },
      ],
      "accessTypes": Array [
        Object {
          "code": "PHYSICAL",
          "display": "Dummy fysisk",
        },
        Object {
          "code": "ONLINE",
          "display": "Dummy online",
        },
      ],
      "audience": Object {
        "ages": Array [
          Object {
            "begin": 10,
            "display": "Dummy 10-14",
            "end": 14,
          },
        ],
        "childrenOrAdults": Array [
          Object {
            "code": "FOR_CHILDREN",
            "display": "Dummy til børn",
          },
        ],
        "generalAudience": Array [],
        "let": null,
        "libraryRecommendation": "Dummy some library recommendation",
        "lix": null,
        "primaryTarget": Array [
          "Dummy Some primary target",
        ],
        "schoolUse": Array [
          Object {
            "code": "FOR_SCHOOL_USE",
            "display": "Dummy til skolebrug",
          },
        ],
      },
      "catalogueCodes": Object {
        "nationalBibliography": Array [
          "DLF201207",
          "BKM201207",
        ],
        "otherCatalogues": Array [],
      },
      "classifications": Array [
        Object {
          "code": "Dummy 86-096",
          "display": "Dummy Skønlitteratur",
          "entryType": "NATIONAL_BIBLIOGRAPHY_ENTRY",
          "system": "Dummy DK5",
        },
      ],
      "contributors": Array [],
      "contributorsFromDescription": Array [
        "Dummy på dansk ved Vivi Berendt",
      ],
      "cover": Object {
        "detail": "link-to-detail",
        "detail_117": "link-to-detail_117",
        "detail_207": "link-to-detail_207",
        "detail_42": "link-to-detail_42",
        "detail_500": "link-to-detail_500",
        "thumbnail": "link-to-thumbnail",
      },
      "creators": Array [
        Object {
          "display": "Kim Fupz Ꜳkeson",
          "nameSort": "Kim Fupz Ꜳkeson",
        },
        Object {
          "display": "Peter Frödin",
          "nameSort": "Peter Frödin",
        },
      ],
      "creatorsFromDescription": Array [
        "Dummy tekst af William Warren",
      ],
      "edition": Object {
        "contributors": Array [],
        "edition": "1. udgave",
        "publicationYear": Object {
          "display": "2020",
          "endYear": null,
          "frequency": null,
          "year": 2020,
        },
        "summary": "1. udgave, Kronstork, 2020",
      },
      "genreAndForm": Array [],
      "hostPublication": Object {
        "creator": "Dummy Some Creator",
        "isbn": "Dummy some isbn",
        "issn": "",
        "issue": "Årg. 97, nr. 10 (2014)",
        "notes": Array [
          "Dummy a note",
        ],
        "pages": "",
        "publisher": "Dansk veterinærtidsskrift",
        "series": Object {
          "title": "Dummy Some Series",
        },
        "summary": "I: Dansk veterinærtidsskrift, Årg. 97, nr. 10 (2014), 2014",
        "title": "Dansk veterinærtidsskrift",
        "year": Object {
          "display": "",
        },
      },
      "identifiers": Array [
        Object {
          "type": "ISBN",
          "value": "Dummy 1234567891234",
        },
      ],
      "languages": Object {
        "abstract": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "main": Array [],
        "original": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "parallel": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "spoken": Array [],
        "subtitles": Array [],
      },
      "latestPrinting": Object {
        "printing": "Dummy 11. oplag",
        "publicationYear": Object {
          "display": "Dummy 2020",
        },
        "summary": "Dummy 11. oplag, 2020",
      },
      "manifestationParts": Object {
        "heading": "",
        "parts": Array [],
        "type": "MUSIC_TRACKS",
      },
      "materialTypes": Array [
        Object {
          "general": "Lydbog (cd)",
          "specific": "Lydbog (cd)",
        },
      ],
      "notes": Array [],
      "physicalDescriptions": Array [
        Object {
          "accompanyingMaterial": null,
          "additionalDescription": null,
          "extent": "Dummy 1 dvd-rom",
          "numberOfPages": null,
          "numberOfUnits": null,
          "playingTime": null,
          "requirements": "Dummy Nødvendigt udstyr Xbox One. - Med multiplayerfunktion",
          "size": null,
          "summary": "1 cd i 1 mappe (67 min.)",
          "technicalInformation": "Dummy Xbox One",
        },
      ],
      "pid": "870970-basis:29433909",
      "publicationYear": Object {
        "display": "2020",
      },
      "publisher": Array [
        "Kronstork",
      ],
      "relatedPublications": Array [
        Object {
          "heading": "Dummy Tidligere titel:",
          "isbn": null,
          "issn": "Dummy 0105-0508",
          "title": Array [
            "Dummy Yngre læger",
          ],
          "url": null,
          "urlText": null,
        },
        Object {
          "heading": "Dummy Udgave i andet medium: Også på cd-rom",
          "isbn": null,
          "issn": "Dummy 1399-4174",
          "title": Array [
            "Dummy Ugeskrift for læger",
          ],
          "url": null,
          "urlText": null,
        },
      ],
      "series": Array [
        Object {
          "alternativeTitles": Array [
            "Dummy Some Series, parallel title",
            "Dummy Some Series, another parallel title",
          ],
          "isPopular": true,
          "numberInSeries": Object {
            "display": "Dummy number one",
            "number": Array [
              1,
            ],
          },
          "parallelTitles": Array [],
          "readThisFirst": true,
          "readThisWhenever": false,
          "title": "Dummy Some Series",
        },
        Object {
          "alternativeTitles": Array [],
          "isPopular": false,
          "numberInSeries": Object {
            "display": "Dummy number one",
            "number": Array [
              1,
            ],
          },
          "parallelTitles": Array [
            "Dummy  Some Series, parallel title",
            "Dummy Some Series, another parallel title",
          ],
          "readThisFirst": null,
          "readThisWhenever": null,
          "title": "Dummy Some Series",
        },
      ],
      "shelfmark": Object {
        "postfix": "gray",
        "shelfmark": "64.64",
      },
      "source": Array [
        "Dummy some source",
      ],
      "subjects": Object {
        "all": Array [
          Object {
            "display": "sjove bøger",
          },
          Object {
            "display": "krimi",
          },
          Object {
            "display": "hunde",
          },
          Object {
            "display": "bortførelse",
          },
        ],
        "dbcVerified": Array [
          Object {
            "display": "Dummy Some fictional subject",
          },
          Object {
            "display": "Dummy 1950-1980",
          },
          Object {
            "display": "Dummy Jens Jensen",
          },
          Object {
            "display": "Dummy Some Corporation",
          },
        ],
      },
      "tableOfContents": Object {
        "content": null,
        "heading": "Dummy Indhold",
        "listOfContent": Array [
          Object {
            "content": "Jeg bor i Hvidovre ",
          },
          Object {
            "content": " Jeg fremlejer en lejlighed ",
          },
          Object {
            "content": " Modsætningen mellem",
          },
        ],
      },
      "titles": Object {
        "alternative": Array [
          "Dummy Some Title: Alternative",
        ],
        "full": Array [],
        "identifyingAddition": "Dummy Indlæst af Jens Jensen",
        "main": Array [
          "Didriksen detektiverne",
        ],
        "original": Array [],
        "parallel": Array [
          "Dummy Parallel Title 1",
          "Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": Array [
          "Dummy En Oversat Titel",
        ],
      },
      "volume": null,
    },
  },
}
`;

exports[`Manifestation fetch by faust 1`] = `
Object {
  "data": Object {
    "manifestation": Object {
      "pid": "870970-basis:29433909",
    },
  },
}
`;

exports[`Manifestation fetch by pid 1`] = `
Object {
  "data": Object {
    "manifestation": Object {
      "pid": "870970-basis:29433909",
    },
  },
}
`;

exports[`Manifestation fetch multi by faust 1`] = `
Object {
  "data": Object {
    "manifestations": Array [
      Object {
        "pid": "870970-basis:29433909",
      },
    ],
  },
}
`;

exports[`Manifestation fetch multi by pid 1`] = `
Object {
  "data": Object {
    "manifestations": Array [
      Object {
        "pid": "870970-basis:29433909",
      },
    ],
  },
}
`;
